# egalax-rs

./: .gitignore  Cargo.toml  Readme.md  TODO.md  config  config.toml  dis.txt  egalax@.service  hid-report-descriptor.txt  notes.md  recording.txt  runegalax.sh
c_src/: ioctls  ioctls.c
examples/: print-hidraw.rs  xrandr-read.rs
linux_config/: 51-hidraw-dev.rules  51-hidraw.rules  53-egalax-usbhid.conf  53-egalax.rules  egalax-rs@.service  egalax.service  org.egalax-rs.policy  sysusers-egalax-rs.conf  tmpfiles-egalax-rs.conf
logs/: recording.txt
src/: audio.rs  config.rs  driver.rs  error.rs  geo.rs  lib.rs  main.rs  protocol.rs  units.rs
src/calibration/: audio.rs  calibrate.rs
workspace/: Cargo.toml  config.toml
workspace/egalax-config/: Cargo.toml  TODO.md
workspace/egalax-config/src/: app.rs  main.rs
workspace/egalax-config/src/app/: calibrate.rs  evdev_events.rs
workspace/egalax-rs/: Cargo.toml
workspace/egalax-rs/examples/: print-hidraw.rs  simulate-hidraw.rs  vmouse-abs.rs  xrandr-read.rs
workspace/egalax-rs/src/: cli.rs  config.rs  driver.rs  error.rs  geo.rs  lib.rs  main.rs  protocol.rs  units.rs
workspace/gui/: Cargo.toml  config.toml
workspace/gui/src/: app.rs  main.rs
workspace/gui/src/app/: audio.rs  calibrate.rs
