[package]
name = "egalax-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# had problems with EV_ABS
evdev-rs = "0.5"
evdev = "0.11"
input-linux = "0.5.0"
nix = "0.23"
tempdir = "0.3.7"
xrandr = "0.1.1"
log = "0.4.14"
env_logger = "0.9.0"
libusb = "0.3.0"
libudev = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1.0"
sdl2 = { version = "0.35", default-features = false, features = ["gfx", "ttf", "mixer", "image"] }
sdl2-sys = "0.35"

[features]
default = ["audio"]
audio = []
