[package]
name = "egalax-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.5"
nix = "0.23"
tempdir = "0.3.7"
xrandr = "0.1.1"
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
#sdl2 = { version = "0.35", default-features = false, features = ["gfx", "ttf", "mixer", "image"] }
thiserror = "1.0.63"
toml = "0.8.19"
anyhow = "1.0.86"

[features]
default = []
audio = []

[[bin]]
name = "calibrate"
path = "src/calibration/calibrate.rs"