[workspace]

resolver = "2"

members = [
    "egalax-rs",
    "egalax-config" 
]

[workspace.dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
const_format = { version = "0.2" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
nix = { version = "0.29", default-features = false }

xrandr = { version = "0.2" }
evdev-rs = { version = "0.6" }