[package]
name = "egalax-config"
version = "0.1.0"
edition = "2021"

[dependencies]
egalax-rs = { path = "../egalax-rs" }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

evdev-rs = { workspace = true }

eframe = { version = "0.30.0" }
egui = { version = "0.30.0" }
rodio = { version = "0.20.1", optional = true, default-features = false, features = [ "mp3" ] }
nix = { workspace = true, features = ["poll"] }
async-channel = { version = "2.3.1" }

[features]
audio = [ "rodio" ]
