[package]
name = "egalax-config"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Dapprich <adrian@dappri.ch>"]
license = "MIT"
description = "An input driver for iiyama ProLite T1930S monitor with integrated touchscreen."
repository = "https://github.com/addap/egalax-rs/"
keywords = ["touchscreen", "egalax", "uinput"]

[dependencies]
egalax-rs = { path = "../egalax-rs" }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

evdev-rs = { workspace = true }

eframe = { version = "0.30.0" }
egui = { version = "0.30.0" }
rodio = { version = "0.20.1", optional = true, default-features = false, features = [
    "mp3",
] }
async-channel = { version = "2.3.1" }
async-fs = { version = "2.1.2" }
async-io = { version = "2.4.0" }
futures-lite = "2.6.0"

[features]
audio = ["rodio"]
