[package]
name = "egalax-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
const_format = { workspace = true }

evdev-rs = { workspace = true, features = [ "serde" ] }

serde = { version = "1.0", features = [ "derive" ] }
toml = { version = "0.8.19" }
xdg = { version = "2.5.2" }

[dev-dependencies]
nix = { workspace = true, features = [ "fs" ] }
tempdir = { version = "0.3.7" }

[[example]]
name = "simulate-hidraw"
